    $dataobj->has_owner( $user ) and ->has_editor( $user) 

2006-09-12 cjg
 * Renamed $doc->public to $dsoc->is_public for clarity

2006-09-12 cjg
 * Renamed Interface/Processor to ScreenProcessor

2006-09-12 cjg
 * First part of splitting up Config.pm etc.

2006-09-13 cjg
 * Broke up .pm files into cfg.d/*.pl
 * Added $session to one of the indexing.pl methods
 * Fixed bug in has_owner permission checks
 * Renamed config {archivefields} to {fields}

2006-09-13 cjg
 * Removed @foo@ from citations

2006-09-14 cjg
 * Removed links to old prototype.js in template

2006-09-14 cjg
 * Moved defaultcfg to lib

2006-09-15 cjg
 * Cleaned up the neat citation (not completely)

2006-09-15 cjg
 * Made line breaks in abort show as <br> in HTML report.

2006-09-15 cjg
 * Fixed bug in Script::Compiled->runtime_error
 * Made Scripts report an error if an unknown function 
    call is met rather than just bailing with a perl error.

2006-09-18 cjg
 * Sorted out time. Times in the db are GMT. Logs are logged in
    localtime. When times are rendered they are converted into
    localtime. Dates are not subject to localtime unless they have
    an hour set too.
 * Time functions in Utils reworked for local/GMT issues.
 * Dates inside eprints can now have T separating date and time and
    Z at the end so it can take ISO date-times.

2006-09-19 cjg
 * Broke up core.pl
 * Fixed some small bugs

2006-09-19 cjg
 * Changed ref="" to name="" in pins in phrase files.

2006-09-19 cjg
 * Added phrases for alt text in warning/error icons
 * Fixed bug in subject component being slow!
 * Reworked subject component (still needs js and css)
 * Removed unused Subjects input component

2006-09-20 cjg
 * EPrints should now install as group apache and group
    writable directories.
 * Added EPrints::try method which runs a code reference in an eval and
    if it fails calls abort with the error.
 * Added dir_perms and file_perms to SystemSettings
